# Mobile-Manipulator-Planning

./: README.md
Flexibly_configuring_task_and_motion_planning_problems_for_mobile_manipulators/ktmpb-python-branch/: .gitignore  CMakeLists.txt  README.md  package.xml
Flexibly_configuring_task_and_motion_planning_problems_for_mobile_manipulators/ktmpb-python-branch/CMakeModules/: FindPugiXML.cmake
Flexibly_configuring_task_and_motion_planning_problems_for_mobile_manipulators/ktmpb-python-branch/launch/: ff_client.launch  kautham-gui.launch  kautham_client.launch  table_rooms_a.launch  table_rooms_a2.launch  table_rooms_ab.launch  table_rooms_b.launch  table_rooms_ba.launch  tiago_kitchen_no_pose.launch  tiago_kitchen_pose.launch  tiago_kitchen_pose_no_graspit.launch
Flexibly_configuring_task_and_motion_planning_problems_for_mobile_manipulators/ktmpb-python-branch/msg/: fVector.msg
Flexibly_configuring_task_and_motion_planning_problems_for_mobile_manipulators/ktmpb-python-branch/presentation/: ETFA_2020_short.pptx
Flexibly_configuring_task_and_motion_planning_problems_for_mobile_manipulators/ktmpb-python-branch/src/: ff_client_python_node.py  kautham_client_python_node.py  ktmpb-python-interface.py
Flexibly_configuring_task_and_motion_planning_problems_for_mobile_manipulators/ktmpb-python-branch/srv/: AddObstacle.srv  AddRobot.srv  AttachObstacle2RobotLink.srv  CheckCollision.srv  Connect.srv  DetachObstacle.srv  FindIK.srv  GetLastPlanComputationTime.srv  GetNumEdges.srv  GetPath.srv  GraspPlanning.srv  ObsPos.srv  OpenProblem.srv  OpenProblemStream.srv  Plan.srv  RemoveRobot.srv  SetDefaultRobControls.srv  SetGoal.srv  SetInit.srv  SetInitObs.srv  SetObsControls.srv  SetPlannerByName.srv  SetPlannerParameter.srv  SetPlannerStream.srv  SetRobControlsNoQuery.srv  SetRobControlsStream.srv  SetRobotsConfig.srv  Solve.srv  TiagoIk.srv
Prehensile_Manipulation_Planning_Modeling_Algorithms_and_Implementation/hpp-doc-stable/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYING  ChangeLog  NEWS  README.md  package.xml
Prehensile_Manipulation_Planning_Modeling_Algorithms_and_Implementation/hpp-doc-stable/.dockers/ubuntu-18.04/: Dockerfile
Prehensile_Manipulation_Planning_Modeling_Algorithms_and_Implementation/hpp-doc-stable/.dockers/ubuntu-20.04/: Dockerfile
Prehensile_Manipulation_Planning_Modeling_Algorithms_and_Implementation/hpp-doc-stable/doc/: Doxyfile.extra.in  config.sh  doxygenLayout.xml.in  doxygen_extra.css  index.html  main.dox.in  missing.dox.in  packages.sh
Prehensile_Manipulation_Planning_Modeling_Algorithms_and_Implementation/hpp-doc-stable/doc/config/: ubuntu-14.04-indigo.sh  ubuntu-16.04-kinetic.sh  ubuntu-18.04-melodic.sh  ubuntu-20.04-noetic.sh
Prehensile_Manipulation_Planning_Modeling_Algorithms_and_Implementation/hpp-doc-stable/instructions/: devel-sources.md  stable-binary.md  stable-sources.md
Prehensile_Manipulation_Planning_Modeling_Algorithms_and_Implementation/hpp-doc-stable/makefiles/: devel.mk  stable.mk
Prehensile_Manipulation_Planning_Modeling_Algorithms_and_Implementation/hpp-doc-stable/releases/: additional-rules.mk  versions
Prehensile_Manipulation_Planning_Modeling_Algorithms_and_Implementation/hpp-doc-stable/scripts/: README.md  auto-install-hpp.sh  create-tags.sh  generate-tar-doc  install-tar-on-remote  packageDep  repos.key
Real_Time_Adaptive_Motion_Planning_(RAMP)_of_Mobile_Manipulators_in_Dynamic_Environments_With_Unforeseen_Changes/ramp-master/path_modification/: CMakeLists.txt  package.xml
Real_Time_Adaptive_Motion_Planning_(RAMP)_of_Mobile_Manipulators_in_Dynamic_Environments_With_Unforeseen_Changes/ramp-master/path_modification/include/: .gitignore  change.h  constraints.h  crossover.h  delete.h  insert.h  main_testing.h  modifier.h  move.h  path_modification_fixtureTest.h  swap.h  utility.h
Real_Time_Adaptive_Motion_Planning_(RAMP)_of_Mobile_Manipulators_in_Dynamic_Environments_With_Unforeseen_Changes/ramp-master/ramp/: CMakeLists.txt  package.xml
Real_Time_Adaptive_Motion_Planning_(RAMP)_of_Mobile_Manipulators_in_Dynamic_Environments_With_Unforeseen_Changes/ramp-master/ramp_control/: CMakeLists.txt  package.xml
Real_Time_Adaptive_Motion_Planning_(RAMP)_of_Mobile_Manipulators_in_Dynamic_Environments_With_Unforeseen_Changes/ramp-master/ramp_debug/: CMakeLists.txt  package.xml
Real_Time_Adaptive_Motion_Planning_(RAMP)_of_Mobile_Manipulators_in_Dynamic_Environments_With_Unforeseen_Changes/ramp-master/ramp_launch/: CMakeLists.txt  package.xml
Real_Time_Adaptive_Motion_Planning_(RAMP)_of_Mobile_Manipulators_in_Dynamic_Environments_With_Unforeseen_Changes/ramp-master/ramp_msgs/: CMakeLists.txt  package.xml
Real_Time_Adaptive_Motion_Planning_(RAMP)_of_Mobile_Manipulators_in_Dynamic_Environments_With_Unforeseen_Changes/ramp-master/ramp_planner/: CMakeLists.txt  add_obstacle.txt  config.yaml  obstacle_tf.txt  package.xml
Real_Time_Adaptive_Motion_Planning_(RAMP)_of_Mobile_Manipulators_in_Dynamic_Environments_With_Unforeseen_Changes/ramp-master/ramp_sensing/: CMakeLists.txt  CMakeLists.txt~  package.xml
Real_Time_Adaptive_Motion_Planning_(RAMP)_of_Mobile_Manipulators_in_Dynamic_Environments_With_Unforeseen_Changes/ramp-master/trajectory_evaluation/: CMakeLists.txt  package.xml
Real_Time_Adaptive_Motion_Planning_(RAMP)_of_Mobile_Manipulators_in_Dynamic_Environments_With_Unforeseen_Changes/ramp-master/trajectory_generator/: CMakeLists.txt  package.xml
Real_Time_Adaptive_Motion_Planning_(RAMP)_of_Mobile_Manipulators_in_Dynamic_Environments_With_Unforeseen_Changes/ramp-master/trajectory_visualisation/: .cproject  .project  CMakeLists.txt  mainpage.dox  package.xml
Receding_Horizon_Task_and _Motion_Planning_in_Changing_Environments/rh-tamp-master/moveit_tamp_capabilities/: CMakeLists.txt  capabilities_plugin_description.xml  package.xml
Receding_Horizon_Task_and _Motion_Planning_in_Changing_Environments/rh-tamp-master/moveit_tmp/: CMakeLists.txt  package.xml
Receding_Horizon_Task_and _Motion_Planning_in_Changing_Environments/rh-tamp-master/moveit_tmp_msgs/: CMakeLists.txt  package.xml
(+902 files in other folders)
