<?xml version="1.0"?>
<package>
  <name>trajectory_generator</name>
  <version>0.0.0</version>
  <description>The trajectory_generator package</description>

  <maintainer email="sterlingm@todo.todo">sterlingm</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>ramp_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>ramp_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
