<package format="2">
	<name>moveit_tmp_msgs</name>
	<version>0.0.0</version>
	<description>Messages for MoveIt Task and Motion Planning Pipeline</description>

	<license>BSD</license>
	<maintainer email="nicola.castaman@dei.unipd.it">Nicola Castaman</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>message_generation</depend>
	<depend>moveit_msgs</depend>

	<exec_depend>message_runtime</exec_depend>
</package>
